--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "aws-sdk": "^2.254.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "ng2-toastr": "^4.1.2",
