--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "aws-sdk": "^2.254.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "ng-multiselect-dropdown": "^0.1.9",
     "ng2-toastr": "^4.1.2",
     "ngx-chips": "^1.9.2",
     "ngx-toastr": "^8.1.1",
